kubernetes/apps/ai/toolhive/config/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway-internal
spec:
  hostnames:
    - mcp-internal.hayden.moe
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway-int
          port: 4483
